# mcuboot

./: .gitmodules  root-ecqv-p256.b64
boot/bootutil/include/bootutil/: boot_record.h  boot_status.h  dice.h  dice_l0.h  dice_rng.h  dice_rot.h  dice_tci.h  image.h
boot/bootutil/include/bootutil/crypto/: sha.h
boot/bootutil/include/coap3/: coap_libcoap_build.h
boot/bootutil/src/: boot_record.c  bootutil_area.c  bootutil_img_hash.c  bootutil_loader.c  bootutil_loader.h  bootutil_misc.c  bootutil_priv.h  dice_l0.c  dice_rng.c  dice_rot.c  dice_tci.c  encrypted.c  image_validate.c  loader.c  sha.c
boot/zephyr/: CMakeLists.txt  Kconfig  app.overlay  main.c  prj.conf  shared_data.c
boot/zephyr/boards/: b_u585i_iot02a.overlay
boot/zephyr/include/mcuboot_config/: mcuboot_config.h
boot/zephyr/include/sysflash/: sysflash.h
docs/: dice.md  imgtool.md
samples/zephyr/dice/: CMakeLists.txt  prj.conf
samples/zephyr/dice/boards/: b_u585i_iot02a.overlay
samples/zephyr/dice/src/: main.c
scripts/dice/: CMakeLists.txt  build.sh  tiny_dice_ca.c
scripts/imgtool/: image.py  main.py
